@@ -13,12 +13,7 @@
 #include  "dds/DCPS/transport/framework/TransportImpl.h"
 #include  "tao/TAO_Singleton.h"
 
-#include "tao/Version.h"
-#if defined TAO_OCI_REV
-#include  "tao/PortableServer/POA.h"
-#else
 #include  "tao/PortableServer/Root_POA.h"
-#endif
 
 #include  "ace/Task.h"
 #include  "ace/Auto_Ptr.h"
